# TeamContext

./: .gitignore  README.md  project_desc.md  pyproject.toml
.tc/: config.yaml  lock.json
.tc/agent/: bootstrap_prompt.md  intents.json  workflow.md
.viking/agfs/shared/candidates/: 2026-02-20-joe-decision-security.md  2026-02-20-joe-pattern-auto-update-ds-store-gitignore-license-readme-md-project-desc-md.md  2026-02-20-joe-pattern-auto-update-gitignore.md  2026-02-20-joe-pattern-auto-update-readme-md-src-tests.md
.viking/agfs/shared/changelog/: 2026-02-20-joe-auto-update-ds-store-gitignore-license-readme-md-project-desc-md.md  2026-02-20-joe-auto-update-gitignore.md  2026-02-20-joe-auto-update-readme-md-src-tests.md  2026-02-20-joe-security.md
src/teamcontext/: __init__.py  cli.py  engine.py
templates/: candidate_template.md  changelog_template.md
tests/: test_cli.py  test_engine.py
